# naval_battle

./: CMakeLists.txt
inc/: boat.h  display.h  file.h  game_initialization.h  gamemode.h  player.h  stdjm.h  struct.h  weapon.h
src/: boat.c  display.c  file.c  game_initialization.c  gamemode.c  main.c  player.c  stdjm.c  weapon.c
